# vibeseek

./: .gitignore  AGENT_LOG.md  ARCHITECT_BLUEPRINT.md  CLAUDE.md  CURSOR_DESIGN.md  README.md  SCROLL_BURST.md  SESSION_HANDOFF.md  agent.md  api.doc  package-lock.json
vibeseek/: .env.local  .env.local.example  .gitignore  CHANGELOG_NOTES.md  PROJECT_CONTEXT.md  README.md  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  supabase-schema.sql  tailwind.config.ts  test-gemini.mjs  tsconfig.tsbuildinfo
vibeseek/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
vibeseek/app/dashboard/: error.tsx  page.tsx
vibeseek/app/leaderboard/: error.tsx  page.tsx
vibeseek/components/: AmbientBackground.tsx  AnimatedCursor.tsx  ChatPanel.tsx  Confetti.tsx  DocumentHistory.tsx  GlowButton.tsx  LeaderboardTable.tsx  PageTransition.tsx  ProgressBar.tsx  QuizCard.tsx  SoundToggle.tsx  TextReveal.tsx  ThemeToggle.tsx  TypingDots.tsx  UploadZone.tsx  VibeCard.tsx  VibePointsBadge.tsx  VideoPlayer.tsx
vibeseek/components/3d/: CanvasSkeleton.tsx  CrystalCluster.tsx  Experience.tsx  FloatingPlane.tsx  LandingSceneCanvas.tsx  LoginOverlay.tsx  LoginSceneCanvas.tsx  Model.tsx  PrismModel.tsx  SceneLoader.tsx  SceneOverlays.tsx  StudyScene.tsx  StudySceneHost.tsx  VibeSceneCanvas.tsx  types.ts  useVibeScrollTimeline.ts
vibeseek/lib/: constant-time.ts  rate-limit.ts
vibeseek/public/: manifest.json
vibeseek/scripts/: smoke-quiz.ts
vibeseek/utils/: anon-id.ts  chat-history.ts  dashboard-tweaks.ts  doc-history.ts  sounds.ts  supabase.ts
(+105 files in other folders)
